--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
