--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
     "@hookform/resolvers": "^3.9.1",
     "@nextui-org/progress": "^2.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.3",
@@ -22,6 +23,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.12.0",
     "next": "15.1.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
@@ -42,6 +44,7 @@
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
