--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "next": "15.1.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
